[package]
name = "rmcloud"
version = "0.1.0"
edition = "2021"
authors = ["Peter Heiss <peter.heiss@uni-muenster.de>"]
description = "rmcloud implements a \"complete as possible\" cloud for the remarkable tablet as an replacement for the official one's."
readme = "README.md"
license = "MIT"


[workspace]

members = [
    "lib/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "3.2.16", features = ["derive"]}
config = { path = "lib/config" }
server = { path = "lib/server" }
anyhow = "1.0.61"


