[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"]}
thiserror = "1.0.32"
storage = { path = "../storage" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }