[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.5.15", features=["multipart", "json", "ws", "tower-log"]}
tower = "0.4"
tokio = { version = "1.20", features = ["full"] }
# https://docs.rs/aliri_axum/latest/aliri_axum/index.html
aliri_axum = "0.1.1"
rust-embed = {version="6.4.0", features=["axum-ex"]}
config = { path = "../config" }
mime_guess = { version = "2" }
tower-http = { version = "0.3.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.83"
serde = "1.0.143"
toml = "0.5.9"