[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.5.15", features=["multipart", "json", "ws", "tower-log"]}
tower = "0.4"
tokio = { version = "1.20", features = ["full"] }
# https://docs.rs/aliri_axum/latest/aliri_axum/index.html
aliri_axum = "0.1.1"
rust-embed = {version="6.4.0", features=["axum-ex"]}
config = { path = "../config" }
mime_guess = { version = "2" }
tower-http = { version = "0.3.0", features = ["trace"] }
serde_json = "1.0.83"
serde = "1.0.143"
toml = "0.5.9"
tracing = "0.1"
storage = { path = "../storage" }
sha2 = "0.10.2"
hmac = "0.12.1"
uuid = {version="1.1.2", features = ["v4"]}
chrono = "0.4.22"
jwt = "0.16.0"