[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
thiserror = "1.0.32"
regex = "1.6.0"
serde = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
jwt = "0.16.0"
sha2 = "0.10.2"
hmac = "0.12.1"
uuid = {version="1.1.2", features = ["v4"]}
rand = "0.8.5"
chrono = "0.4.22"
